--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.amap.api.maps2d.MapView
         android:id="@+id/map"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="4">
+        android:layout_height="wrap_content">
     </com.amap.api.maps2d.MapView>
 
+    <com.gzcz.rtchen.positionmarker.BaseFpvView
+        android:layout_width="160dp"
+        android:layout_height="120dp"
+         android:id="@+id/view"
+        android:layout_above="@+id/bottom_layout"
+        android:layout_alignParentStart="true" />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_weight="1">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/ConnectStatusTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Waiting..."
-            android:layout_weight="1"/>
+            android:text="Waiting..." />
         <Button
             android:id="@+id/locate"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Locate"
-            android:layout_weight="3"/>
+            android:text="Locate" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
