--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -8,8 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="4" />
+        android:layout_gravity="center_horizontal"/>
 
     <com.amap.api.maps2d.MapView
         android:id="@+id/map"
@@ -41,20 +40,14 @@
             android:id="@+id/locate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-<<<<<<< HEAD
             android:text="Locate" />
-=======
-            android:text="Locate"
-            android:layout_weight="3"/>
 
         <Button
             android:id="@+id/btn_add_qrcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="QRcode"
-            android:layout_weight="3"/>
+            android:text="QRcode"/>
 
->>>>>>> master
     </LinearLayout>
 
 </RelativeLayout>
