--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -1,20 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.gzcz.rtchen.positionmarker.ProjectFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:id="@+id/linearLayout">
 
         <EditText
             android:id="@+id/edit_view_prj"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="15"/>
 
         <Button
             android:id="@+id/btn_add_prj"
@@ -22,13 +23,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAllCaps="false"
-            android:text="Add"/>
+            android:text="@string/btn_add_prj"/>
     </LinearLayout>
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="464dp"
-        android:id="@+id/list_view_prj"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_height="match_parent"
+        android:id="@+id/list_view_prj" />
 
-</FrameLayout>
+</LinearLayout>
