--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.gzcz.rtchen.positionmarker.ProjectFragment">
+    tools:context=".Fragments.ProjectFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,6 +15,7 @@
             android:id="@+id/edit_view_prj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:hint="@string/et_hint"
             android:layout_weight="15"/>
 
         <Button
@@ -27,7 +28,7 @@
     </LinearLayout>
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list_view_prj" />
 
