--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -1,58 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <TextView
+    <!-- 序号 -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/mtv_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="26dp"
+            android:text="序号" />
+    </LinearLayout>
+
+    <!-- 竖直排放点名和坐标 -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="序号"
-        android:id="@+id/mtv_num"
-        android:layout_alignBottom="@+id/mcb"
-        android:layout_alignParentStart="true"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textAlignment="gravity"
-        android:singleLine="false"
-        android:layout_alignParentTop="true" />
+        android:layout_marginLeft="10dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="点名"
-        android:id="@+id/mtv_dotname"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/mtv_num" />
+        <!-- 排放点名 -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="点序号"
-        android:id="@+id/mtv_dotnum"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/mtv_dotname" />
+            <TextView
+                android:id="@+id/mtv_dotname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="点名"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/mtv_dotnum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="点序号" />
+        </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="经度"
-        android:id="@+id/mtv_latitude"
-        android:layout_below="@+id/mtv_dotnum"
-        android:layout_alignEnd="@+id/mtv_dotnum" />
+        <!-- 排放坐标 -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="纬度"
-        android:id="@+id/mtv_longitude"
-        android:layout_alignBottom="@+id/mtv_num"
-        android:layout_toEndOf="@+id/mtv_num" />
+            <TextView
+                android:id="@+id/mtv_latitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="经度" />
+            <TextView
+                android:id="@+id/mtv_longitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="纬度" />
+        </LinearLayout>
+    </LinearLayout>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:id="@+id/mcb"
-        android:checked="false" />
+    <!-- 使用LinerLayout将CheckBox放到最右 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="right">
 
-</RelativeLayout>
+        <CheckBox
+            android:id="@+id/mcb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false" />
+    </LinearLayout>
+
+
+</LinearLayout>
