--- a/app/src/main/res/layout/pointlist_fragment.xml
+++ b/app/src/main/res/layout/pointlist_fragment.xml
@@ -1,10 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.PointListFragment">
 
     <LinearLayout
+        android:id="@+id/layout_point_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -22,6 +23,13 @@
 
     </LinearLayout>
 
+    <ListView
+        android:id="@+id/lv_points_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout_point_list">
+    </ListView>
 
 
-</FrameLayout>
+
+</RelativeLayout>
