正常在PointListFragment中显示点

--- a/app/src/main/res/layout/pointlist_fragment.xml
+++ b/app/src/main/res/layout/pointlist_fragment.xml
@@ -24,7 +24,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/lv_points_list"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/layout_point_list">
