实现在ZXingQRFragment中显示并翻页二维码
每页二维码最多含有20组数据

--- a/app/src/main/res/layout/zxingqr_fragment.xml
+++ b/app/src/main/res/layout/zxingqr_fragment.xml
@@ -2,12 +2,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/zxingqr_fragment_layout"
     tools:context="com.gzcz.rtchen.positionmarker.ZXingQRFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_next_page"
+        android:text="@string/btn_next_page"
+        android:layout_gravity="right|bottom" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_previous_page"
+        android:text="@string/btn_previous_page"
+        android:layout_gravity="left|bottom" />
+
+    <ImageView
+        android:id="@+id/iv_qr_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"/>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="40dp"
+        android:id="@+id/text_page_number"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal|top" />
 
 </FrameLayout>
