--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/map_fragment_layout"
     android:layout_height="match_parent">
 
     <com.amap.api.maps2d.MapView
@@ -41,12 +42,5 @@
             android:text="QRcode"/>
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_qr_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center_horizontal"/>
 
 </RelativeLayout>
