--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -4,20 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <!-- 序号 -->
+    <!-- 序号区块 -->
+    <!-- 需要设定 width 否则序号靠右需要滚动刷新后才会靠右 -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/mtv_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="26dp"
-            android:text="序号" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="end"
+            android:text="序号"
+            android:textSize="30sp" />
+
     </LinearLayout>
 
-    <!-- 竖直排放点名和坐标 -->
+    <!-- 点名和坐标区块 -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,11 +39,13 @@
                 android:layout_height="wrap_content"
                 android:text="点名"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/mtv_dotnum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="点序号" />
+                android:text="点序号"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- 排放坐标 -->
@@ -53,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="经度" />
+
             <TextView
                 android:id="@+id/mtv_longitude"
                 android:layout_width="wrap_content"
