--- a/app/src/main/res/layout/pointlist_fragment.xml
+++ b/app/src/main/res/layout/pointlist_fragment.xml
@@ -23,13 +23,49 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/layout_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_point_list">
+        <include layout="@layout/my_listview"/>
+    </LinearLayout>
+
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/layout_point_list">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_title"
+        android:layout_above="@+id/linearLayout2">
     </ListView>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/linearLayout2">
+
+        <!-- TODO：放到@String、修改id -->
+        <Button
+            android:id="@+id/btn_qr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="生成二维码"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="删除选中项"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="保存修改"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="全选/不选"/>
+    </LinearLayout>
 
 </RelativeLayout>
