--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="fill_parent"
     android:id="@+id/map_fragment_layout"
     android:layout_height="match_parent">
 
@@ -13,9 +13,68 @@
     <com.gzcz.rtchen.positionmarker.BaseFpvView
         android:layout_width="160dp"
         android:layout_height="120dp"
-         android:id="@+id/view"
+        android:id="@+id/view"
         android:layout_above="@+id/bottom_layout"
         android:layout_alignParentStart="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/top_layout"
+        android:background="#E0D3D3D3">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="当前工程："
+                android:id="@+id/tv_label_ProjectName"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
+
+            <Spinner
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sp_projectslist"
+                android:spinnerMode="dropdown"
+                android:layout_below="@+id/tv_label_DotName"
+                android:layout_alignParentStart="true" />
+        </LinearLayout>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_dotname"
+            android:layout_below="@+id/sp_projectslist"
+            android:layout_alignParentStart="true"
+            android:hint="请输入点名" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="当前点名："
+                android:id="@+id/tv_label_DotName"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="null"
+                android:id="@+id/textView2" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bottom_layout"
@@ -23,7 +82,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="#A0D3D3D3">
 
         <TextView
             android:id="@+id/ConnectStatusTextView"
@@ -42,5 +102,8 @@
             android:text="QRcode"/>
 
     </LinearLayout>
+
+
+
 
 </RelativeLayout>
