--- a/app/src/main/res/layout/pointlist_fragment.xml
+++ b/app/src/main/res/layout/pointlist_fragment.xml
@@ -63,6 +63,7 @@
             android:layout_height="wrap_content"
             android:text="保存修改"/>
         <Button
+            android:id="@+id/btn_selectall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="全选/不选"/>
