修复图标在地图上不显示的bug

--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -81,8 +81,8 @@
             android:layout_height="wrap_content"
             android:text="ADD"
             android:id="@+id/btn_addPoint"
-            android:enabled="false" />
-
+            android:enabled="true" />
+<!--TODO：修改为false-->
     </LinearLayout>
 
 
