重构：阶段1：初步整理
1、修改DataManager底层数据处理方式
2、修改ProjectFragment加载时EditText不获得焦点
3、修改ProjectFragment跳转后可以按返回键返回
4、新增工具类Utils存放静态方法：GPS坐标转换函数

--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -9,7 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
+        <!-- 防止界面启动时EditText控件默认获得焦点弹出键盘 -->
+        <requestFocus/>
 
         <EditText
             android:id="@+id/edit_view_prj"
