--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -80,9 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ADD"
-            android:id="@+id/btn_addPoint"
-            android:enabled="true" />
-<!--TODO：修改为false-->
+            android:id="@+id/btn_addPoint"/>
     </LinearLayout>
 
 
