--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,57 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
     android:id="@+id/map_fragment_layout"
-    android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.amap.api.maps2d.MapView
         android:id="@+id/map"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </com.amap.api.maps2d.MapView>
+        android:layout_height="wrap_content"></com.amap.api.maps2d.MapView>
+
 
     <com.gzcz.rtchen.positionmarker.BaseFpvView
+        android:id="@+id/view"
         android:layout_width="160dp"
         android:layout_height="120dp"
-        android:id="@+id/view"
         android:layout_above="@+id/bottom_layout"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
+
 
     <LinearLayout
+        android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/top_layout"
-        android:background="#E0D3D3D3">
+        android:background="#E0D3D3D3"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_label_ProjectName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当前工程："
-                android:id="@+id/tv_label_ProjectName"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+                android:text="当前工程：" />
 
             <Spinner
+                android:id="@+id/sp_projectslist"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/sp_projectslist"
-                android:spinnerMode="dropdown"
+                android:layout_alignParentStart="true"
                 android:layout_below="@+id/tv_label_DotName"
-                android:layout_alignParentStart="true" />
+                android:spinnerMode="dropdown" />
         </LinearLayout>
 
         <EditText
+            android:id="@+id/et_dotname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/et_dotname"
-            android:layout_below="@+id/sp_projectslist"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/sp_projectslist"
             android:hint="请输入点名" />
 
     </LinearLayout>
@@ -60,16 +65,17 @@
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="#A0D3D3D3">
+        android:background="#A0D3D3D3"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/ConnectStatusTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="等待无人机连接..." />
+
         <Button
             android:id="@+id/locate"
             android:layout_width="wrap_content"
@@ -77,13 +83,12 @@
             android:text="Locate" />
 
         <Button
+            android:id="@+id/btn_addPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ADD"
-            android:id="@+id/btn_addPoint"/>
+            android:enabled="false"
+            android:text="ADD" />
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
