--- a/app/src/main/res/layout/zxingqr_fragment.xml
+++ b/app/src/main/res/layout/zxingqr_fragment.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/zxingqr_fragment_layout"
-    tools:context="com.gzcz.rtchen.positionmarker.ZXingQRFragment">
+    tools:context=".Fragments.ZXingQRFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
