--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -3,12 +3,13 @@
     android:id="@+id/map_fragment_layout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:keepScreenOn="true">
 
     <com.amap.api.maps2d.MapView
         android:id="@+id/map"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></com.amap.api.maps2d.MapView>
+        android:layout_height="wrap_content"/>
 
 
     <com.gzcz.rtchen.positionmarker.BaseFpvView
