--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -81,14 +81,14 @@
             android:id="@+id/locate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Locate" />
+            android:text="定位" />
 
         <Button
             android:id="@+id/btn_addPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:text="ADD" />
+            android:text="记录" />
     </LinearLayout>
 
 
